--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,25 @@
 /* splash screen */
 
 #splash-screen {
-    width: 100vw;
-    height: 100vh;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 50%;
+}
+
+#body-splash-screen {
+    background-color: black;
+    align-items: center;
+}
+
+/* pc */
+@media (min-width:1000px){
+
+    #splash-screen {
+        width: 25%;
+        margin-left: 38%;
+        margin-top: 10%;
+    }
+    
 }
 
 /* login */
@@ -68,6 +85,60 @@
     border-color: white;
     border-width: 3px;
     color: white;
+}
+
+/* pc */
+@media (min-width:1000px){
+
+    #icon-gabigordo-login {
+        width: 20%;
+        margin-left: 40%;
+        margin-top: 5%;
+    }
+
+    .login-container {
+        margin-left: 39%;
+    }
+
+    .input-text-login {
+        height: 25px;
+        width: 35%;
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
+    #sent-login {
+        width: 20%;
+        height: 50px;
+        margin-left: 8%;
+        margin-top: 3%;
+    }
+
+}
+
+/* tablet */
+@media (min-width:501px) and (max-width:999px){
+
+    #icon-gabigordo-login {
+        width: 40%;
+        margin-left: 30%;
+        margin-top: 5%;
+    }
+
+    .login-container {
+        margin-left: 32%;
+    }
+
+    #sent-login {
+        margin-left: 8%;
+        margin-top: 3%;
+    }
+
+    .input-text-login {
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
 }
 
 /* main menu */
@@ -222,6 +293,78 @@
     color: white;
 }
 
+/* pc */
+@media (min-width:1000px){
+
+    #title {
+        font-size: 40px;
+        margin-top: -0.1%;
+    }
+
+    .icon-main-menu1 {
+        margin-top: 5%;
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 80%;
+    }
+    
+    .icon-img1 {
+        width: 40%;
+        margin-left: 7%;
+    }
+    
+    .icon-price1 {
+        float: right;
+        margin-top: 17%;
+        margin-right: 7%;
+        font-size: 90px;
+    }
+
+    .icon-main-menu2 {
+        margin-top: 5%;
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 80%;
+    }
+    
+    .icon-img2 {
+        width: 40%;
+        margin-left: 7%;
+    }
+    
+    .icon-price2 {
+        float: right;
+        margin-top: 17%;
+        margin-right: 7%;
+        font-size: 90px;
+    }
+
+    #eyebrow-text {
+        float: right;
+        margin-top: 17%;
+        margin-right: 7%;
+        font-size: 60px;
+    }
+    
+    #eyebrow-price {
+        margin-right: 27%;
+        margin-top: -15%;
+        font-size: 50px;
+    }
+
+}
+@media (min-width:1701px){
+    #eyebrow-text {
+        font-size: 90px;
+    }
+
+    #eyebrow-price {
+        margin-right: 21%;
+        margin-top: -18%;
+        font-size: 80px;
+    }
+}
+
 /* schedule */
 
 #body-schedule {
@@ -296,6 +439,59 @@
     color: white;
 }
 
+/* pc */
+@media (min-width:1000px){
+
+    #icon-gabigordo-schedule {
+        width: 20%;
+        margin-left: 40%;
+        margin-top: 1%;
+    }
+
+    .schedule-container {
+        margin-left: 39%;
+    }
+
+    .input-schedule {
+        height: 25px;
+        width: 35%;
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
+    #sent-schedule {
+        width: 20%;
+        height: 50px;
+        margin-left: 8%;
+    }
+
+}
+
+/* tablet */
+@media (min-width:501px) and (max-width:999px){
+
+    #icon-gabigordo-schedule {
+        width: 40%;
+        margin-left: 30%;
+        margin-top: 5%;
+    }
+
+    .schedule-container {
+        margin-left: 10%;
+    }
+
+    #sent-schedule {
+        margin-left: 8%;
+        margin-top: 3%;
+    }
+
+    .input-schedule {
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
+}
+
 /* gallery */
 
 #body-gallery {
@@ -332,6 +528,36 @@
     text-align: center;
 }
 
+/* pc */
+@media (min-width:1487px){
+
+    .gallery-photo {
+        width: 50%;
+        border-radius: 50px;
+    }
+
+    .card-text {
+        float: right;
+        margin-top: 20%;
+        font-size: 30px;
+    }
+
+}
+@media (min-width:1000px) and (max-width:1486px){
+
+    .gallery-photo {
+        width: 50%;
+        border-radius: 50px;
+    }
+
+    .card-text {
+        float: right;
+        margin-top: 20%;
+        font-size: 20px;
+    }
+
+}
+
 /* workers */
 
 #body-workers {
@@ -349,6 +575,46 @@
     font-family: sans-serif;
     color: white;
     font-weight: bold;
+}
+
+/* pc */
+@media (min-width:1487px){
+
+    .workers-photo {
+        width: 50%;
+        border-radius: 50px;
+    }
+
+    .workers-title {
+        font-size: 60px;
+    }
+
+    #body-workers .card-text {
+        float: right;
+        margin-top: 10%;
+        font-size: 30px;
+        width: 25%;
+    }
+
+}
+@media (min-width:1000px) and (max-width:1486px){
+
+    .workers-photo {
+        width: 50%;
+        border-radius: 50px;
+    }
+
+    .workers-title {
+        font-size: 40px;
+    }
+
+    #body-workers .card-text {
+        float: right;
+        margin-top: 6%;
+        font-size: 20px;
+        width: 25%;
+    }
+
 }
 
 /* history */
